cmake_minimum_required(VERSION 3.21)
project(Abir)

set(CMAKE_CXX_STANDARD 17)

add_executable(Abir main.cpp Islands.h ValidTree.h Components.h CourseSchehdule.h CourseScheduleII.h
        NextRightPointer.h DistanceK.h Backtracking.h LetterCasePerm.h Subset.h
        Combinations.h PalindromePartitioning.h LetterCombination.h GeneralizedAbbreviation.h
        TreeProblems.h DynamicProgramming.h)
